[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Network/NetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://Resources/Assets/UI/titlescreen.jpg" type="Texture" id=2]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.719
anchor_right = 0.5
anchor_bottom = 0.738
margin_left = -176.0
margin_top = -90.0
margin_right = 175.0
margin_bottom = 162.0

[node name="JoinMain" type="Button" parent="VBoxContainer"]
margin_right = 351.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
text = "Connect to Main Server (available until 2022-09-30)"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 351.0
margin_bottom = 68.0

[node name="IpAddress" type="LineEdit" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 351.0
margin_bottom = 96.0
align = 1
placeholder_text = "Ip Address"

[node name="Port" type="LineEdit" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 351.0
margin_bottom = 124.0
align = 1
placeholder_text = "Port"

[node name="Host" type="Button" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 351.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 60 )
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 351.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 60 )
text = "Join"

[connection signal="pressed" from="VBoxContainer/JoinMain" to="." method="_on_JoinMain_pressed"]
[connection signal="text_changed" from="VBoxContainer/IpAddress" to="." method="_on_IpAddress_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Port" to="." method="_on_Port_text_changed"]
[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_Join_pressed"]
